--- a/petcareAPI/src/main/resources/application.properties
+++ b/petcareAPI/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=PetcareAPI
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jbcd:mysql://localhost:3306/petcare_bd
+spring.datasource.username=
+spring.datasource.password=
