--- a/petcareAPI/src/main/resources/application.properties
+++ b/petcareAPI/src/main/resources/application.properties
@@ -1,5 +1,25 @@
 spring.application.name=PetcareAPI
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jbcd:mysql://localhost:3306/petcare_bd
+spring.datasource.url=jdbc:mysql://localhost:3306/petcare
 spring.datasource.username=root
-spring.datasource.password=lesy4
+spring.datasource.password=123456789
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# swagger-ui
+springdoc.api-docs.enabled = true
+springdoc.swagger-ui.enabled = true
+springdoc.swagger-ui.path = /doc/swagger-ui.html
+springdoc.packagesToScan=mx.petcare.mascotas.petcareAPI.Controller
+
+
+
+
+#Mondongodb
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=Sazon_iaDB
+spring.data.mongodb.username=CandeGod
+spring.data.mongodb.password=Cande213apo$
+spring.data.mongodb.authentication-database=admin
+
